# Budget-app

backend/: .env  .env.example  README.md  budget.db  pyproject.toml
backend/app/: main.py
backend/app/api/routers/: auth.py  categories.py  stats.py  transactions.py
backend/app/core/: config.py  security.py
backend/app/db/: init_db.py  session.py
backend/app/models/: category.py  transaction.py  user.py
backend/app/repositories/: base.py  transaction_repo.py
backend/app/schemas/: auth.py  stats.py  transaction.py
backend/app/services/: stats_service.py  transaction_service.py
backend/budget_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: package-lock.json
frontend/.angular/cache/20.3.4/frontend/: .tsbuildinfo
frontend/.angular/cache/20.3.4/frontend/vite/deps_ssr/: @angular_forms.js  @angular_platform-browser.js  @angular_platform-server.js  @angular_router.js  @angular_ssr.js  @angular_ssr_node.js  @angular_ssr_node.js.map  _metadata.json  chart__js_auto.js  chunk-FYUQGSFT.js  chunk-FYUQGSFT.js.map  chunk-I7LGW2IP.js  chunk-K3RJRCL7.js  chunk-K3RJRCL7.js.map  chunk-RWTQL6RG.js  chunk-XXS7W67C.js  chunk-XXS7W67C.js.map  ng2-charts.js  ng2-charts.js.map
frontend/src/: main.server.ts  main.ts
frontend/src/app/: add-transaction.component.ts  api.service.ts  app.config.server.ts  app.config.ts  app.html  app.routes.ts  app.scss  app.ts  balance-card.component.ts  dashboard.component.ts  model.ts  shared.module.ts  stats.component.ts  storage.service.ts  transactions-table.component.ts
